--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A website project showcasing coursework and location information.">
-    <meta name="author" content="Your Name">
+    <meta name="author" content="Samuel Soriano">
     <title>Course Home Page</title>
     <link rel="stylesheet" href="styles/index.css">
     <script src="scripts/index.js" defer></script>
