--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <meta name="description" content="A website project showcasing coursework and location information.">
     <meta name="author" content="Samuel Soriano">
     <title>Course Home Page</title>
+
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Course Home Page" />
+    <meta property="og:url" content="https://samuelsoriano80.github.io/wdd231/" />
+    <meta property="og:image"
+        content="https://static.nationalgeographicla.com/files/styles/image_3200/public/5fef7d340b2b4322631999.jpg?w=1600&h=1067" />
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Course Home Page preview" />
+    <meta name="twitter:description" content="Visit my webpage please." />
+    <meta name="twitter:image"
+        content="https://static.nationalgeographicla.com/files/styles/image_3200/public/5fef7d340b2b4322631999.jpg?w=1600&h=1067" />
+
     <link rel="stylesheet" href="styles/index.css">
     <script src="scripts/index.js" defer></script>
 
@@ -14,15 +27,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+
+    <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
     <header>
         <img src="images/me.jpg" alt="Profile Picture" class="profile-pic">
         <span>Samuel Soriano</span>
+        <button class="hamburger" id="hamburger"> &#9776; </button>
     </header>
-    <nav>
-        <ul>
+    <nav class="animateme" id="animateme">
+        <ul class="nav-menu" id="nav-menu">
             <li><a href="#home">Home</a></li>
             <li><a href="#chamber">Chamber</a></li>
             <li><a href="https://github.com/SamuelSoriano80/wdd231">GitHub Profile</a></li>
