--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -32,7 +32,7 @@
     </header>
     <main>
         <section class="toggle-view">
-            <h2>Directory</h2>
+            <h2>Chamber Directory</h2>
             <button id="gridView">Grid View</button>
             <button id="listView">List View</button>
         </section>
@@ -40,19 +40,19 @@
         </section>
     </main>
     <footer>
-        <div class="footer-left">
+        <div>
             <p>Timbuktu Chamber of Commerce</p>
             <p>123 Commerce St.</p>
             <p>Timbuktu, TK 56789</p>
             <p>Email: contact@timbuktuchamber.com</p>
             <p>Phone: (123) 456-7890</p>
         </div>
-        <div class="footer-center">
+        <div>
             <a href="#" class="social-button"><img src="images/youtube.webp" alt="Youtube logo" width="50"></a>
             <a href="#" class="social-button"><img src="images/twitter.webp" alt="Twitter logo" width="50"></a>
             <a href="#" class="social-button"><img src="images/linkedin.png" alt="LinkedIn logo" width="50"></a>
         </div>
-        <div class="footer-right">
+        <div>
             <p>WDD231 Class Project</p>
             <p>Samuel Soriano</p>
             <p>&copy; 2025 Timbuktu Chamber of Commerce</p>
