--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.worldatlas.com/r/w1200/upload/4d/82/37/timbuktu.jpg">
     <meta property="og:url" content="https://samuelsoriano80.github.io/wdd231/chamber/directory.html">
-    <title>Chamber Directory | Timbuktu Chamber of Commerce</title>
+    <title>Chamber Directory</title>
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/directory.css">
     <script defer src="scripts/directory.js"></script>
@@ -19,7 +19,7 @@
 <body>
     <header>
         <img src="images/timbuktu_flag.jpg" alt="timbuktu flag" width="100">
-        <h1>Timbuktu Chamber of Commerce</h1>
+        <h1>Chamber Directory | Timbuktu Chamber of Commerce</h1>
         <button class="hamburger" id="hamburger"> &#9776; </button>
         <nav class="animateme" id="animateme">
             <ul class="nav-menu" id="nav-menu">
