--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://www.worldatlas.com/r/w1200/upload/4d/82/37/timbuktu.jpg">
     <meta property="og:url" content="https://samuelsoriano80.github.io/wdd231/chamber/directory.html">
-    <title>Chamber Directory</title>
+    <title>Chamber Directory | Timbuktu Chamber of Commerce</title>
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/directory.css">
     <script defer src="scripts/directory.js"></script>
