--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -32,7 +32,7 @@
     </header>
     <main>
         <section class="toggle-view">
-            <h2>Chamber Directory</h2>
+            <h2>Chamber Directory | Timbuktu Chamber of Commerce</h2>
             <button id="gridView">Grid View</button>
             <button id="listView">List View</button>
         </section>
