--- a/chamber/index.html
+++ b/chamber/index.html
@@ -32,7 +32,7 @@
     </header>
     <main>
         <div class="hero">
-            <img src="images/Timbuktu_banner.jpg" alt="Timbuktu vacation destination">
+            <img src="images/timbuktu_banner.jpg" alt="Timbuktu vacation destination">
             <a href="join-chamber.html" class="cta-link">Join the Chamber</a>
         </div>
 
