--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </section>
         <section class="location">
             <h2>Queretaro, Mexico</h2>
-            <img src="images/mexican-flag.jpg" alt="Queretaro, Mexico">
+            <img src="images/mexican-flag.jpg" alt="Queretaro, Mexico" class="animated-image">
         </section>
         <section class="courses">
             <h2>Available Courses</h2>
@@ -63,6 +63,8 @@
             <div id="course-container"></div>
             <p>Total Credits: <span id="total-credits">0</span></p>
         </section>
+
+        <dialog id="course-details"></dialog>
     </main>
     <footer>
         <p>&copy; <span id="current-year"></span> Samuel Soriano, Mexico</p>
