--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -49,6 +49,7 @@
         <div>
             <p>WDD231 Class Project</p>
             <p>Samuel Soriano</p>
+            <aside id="visit-message" class="visit-message"></aside>
             <p>&copy; 2025 Timbuktu Chamber of Commerce</p>
             <p>Last Modification: <span id="lastModified"></span></p>
         </div>
